# 3d-opengl-testbed

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  notes.txt
.cache/clangd/index/: 3DSConverter.cpp.93150CEC44C7DDD6.idx  3DSExporter.cpp.3CEDE5629019152C.idx  3DSExporter.h.B18BC94EAD9DC5C0.idx  3DSHelper.h.E36464F0BF81327D.idx  3DSLoader.cpp.A9B818D1E57C01EF.idx  3DSLoader.h.A245DA650D85FC7C.idx  3MFTypes.h.FA774BE35643311D.idx  3MFXmlTags.h.ACCD759C3F2A8571.idx  ACLoader.cpp.DB8AA0A48559FCCD.idx  ACLoader.h.0E665D1EFBCDCC31.idx  AMFImporter.cpp.2A48028C02FDE63B.idx  AMFImporter.hpp.48943EC6828D86C7.idx  AMFImporter_Geometry.cpp.384D10EC0E9DC589.idx  AMFImporter_Material.cpp.F065073B2069026B.idx  AMFImporter_Node.hpp.995E55FC91987598.idx  AMFImporter_Postprocess.cpp.63E92E04A4667F85.idx  ASELoader.cpp.233DFC5FCA77FEFA.idx  ASELoader.h.C1F3327068D4EFB0.idx  ASEParser.cpp.1CB1FC135FFA9E99.idx  ASEParser.h.C6F053FCB01064E1.idx  ArmaturePopulate.cpp.DE58D0AAB351DBAA.idx  ArmaturePopulate.h.35A6BFAB9CC4EADF.idx  AssbinExporter.cpp.B6CC64DC809145E3.idx  AssbinFileWriter.cpp.A2B1642BB5CD15B4.idx  AssbinFileWriter.h.D14044DD9D3F013C.idx  AssbinLoader.cpp.49420E7D893CA4B5.idx  AssbinLoader.h.FBABFD035D45E73E.idx  AssertHandler.cpp.3A66726C2D1A2B51.idx  AssertHandler.h.7D2292B25181AC9B.idx  Assimp.cpp.57D29C8FA3EAA869.idx  AssimpCExport.cpp.D40CC8736DCC33D5.idx  AssxmlExporter.cpp.3FD53A60B7D84DDC.idx  AssxmlFileWriter.cpp.C7F24C572C8C8388.idx  AssxmlFileWriter.h.847329807F790AF7.idx  B3DImporter.cpp.C0FF01A48D7D2E11.idx  B3DImporter.h.454D9520E74903B3.idx  BVHLoader.cpp.4F2022DD0AD6318F.idx  BVHLoader.h.C4B1FF749C62573A.idx  Base64.cpp.952D1CAF348F52E7.idx  Base64.hpp.51CD5E08E0B972D1.idx  (+849 more)
include/: application.hpp  batcher.hpp  camera.hpp  editor.hpp  light_sources.hpp  mesh.hpp  model.hpp  shader.hpp  stage.hpp  structs.hpp  utils.hpp  vert_geometry.hpp  vertex_array.hpp
res/shaders/: lighting.frag  lighting.vert
shaders/: light.frag  lighting.frag  lighting.vert  simple.frag  simple.vert
src/: application.cpp  batcher.cpp  camera.hpp  imgui.ini  light_sources.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  stage.cpp  utils.cpp  utils.hpp  vertex_array.hpp
src/gl_state/: vertex_array.hpp
src/headers/: utils.hpp  vertex_array.hpp
src/include/: application.hpp  editor.hpp  mesh.hpp  stage.hpp  utils.hpp  vertex_array.hpp
src/models/: model.cpp  model.hpp  structs.hpp
src/transformations/: camera.hpp
